add_library(ogre3d

"./include/asm_math.h"
"./include/Ogre.h"
"./include/OgreAlignedAllocator.h"
"./include/OgreAnimable.h"
"./include/OgreAnimation.h"
"./include/OgreAnimationState.h"
"./include/OgreAnimationTrack.h"
"./include/OgreAny.h"
"./include/OgreArchive.h"
"./include/OgreArchiveFactory.h"
"./include/OgreArchiveManager.h"
"./include/OgreAtomicObject.h"
"./include/OgreAtomicScalar.h"
"./include/OgreAutoParamDataSource.h"
"./include/OgreAxisAlignedBox.h"
"./include/OgreBillboard.h"
"./include/OgreBillboardChain.h"
"./include/OgreBillboardParticleRenderer.h"
"./include/OgreBillboardSet.h"
"./include/OgreBitwise.h"
"./include/OgreBlendMode.h"
"./include/OgreBone.h"
"./include/OgreBuildSettings.h"
"./include/OgreCamera.h"
"./include/OgreCodec.h"
"./include/OgreColourValue.h"
"./include/OgreCommon.h"
"./include/OgreCompositionPass.h"
"./include/OgreCompositionTargetPass.h"
"./include/OgreCompositionTechnique.h"
"./include/OgreCompositor.h"
"./include/OgreCompositorChain.h"
"./include/OgreCompositorInstance.h"
"./include/OgreCompositorLogic.h"
"./include/OgreCompositorManager.h"
"./include/OgreConfig.h"
"./include/OgreConfigDialog.h"
"./include/OgreConfigFile.h"
"./include/OgreConfigOptionMap.h"
"./include/OgreController.h"
"./include/OgreControllerManager.h"
"./include/OgreConvexBody.h"
"./include/OgreCustomCompositionPass.h"
"./include/OgreDataStream.h"
"./include/OgreDDSCodec.h"
"./include/OgreDefaultHardwareBufferManager.h"
"./include/OgreDeflate.h"
"./include/OgreDepthBuffer.h"
"./include/OgreDistanceLodStrategy.h"
"./include/OgreDualQuaternion.h"
"./include/OgreDynLib.h"
"./include/OgreDynLibManager.h"
"./include/OgreEdgeListBuilder.h"
"./include/OgreEntity.h"
"./include/OgreErrorDialog.h"
"./include/OgreETCCodec.h"
"./include/OgreException.h"
"./include/OgreExternalTextureSource.h"
"./include/OgreExternalTextureSourceManager.h"
"./include/OgreFactoryObj.h"
"./include/OgreFileSystem.h"
"./include/OgreFileSystemLayer.h"
"./include/OgreFrameListener.h"
"./include/OgreFreeImageCodec.h"
"./include/OgreFrustum.h"
"./include/OgreGpuProgram.h"
"./include/OgreGpuProgramManager.h"
"./include/OgreGpuProgramParams.h"
"./include/OgreGpuProgramUsage.h"
"./include/OgreHardwareBuffer.h"
"./include/OgreHardwareBufferManager.h"
"./include/OgreHardwareCounterBuffer.h"
"./include/OgreHardwareIndexBuffer.h"
"./include/OgreHardwareOcclusionQuery.h"
"./include/OgreHardwarePixelBuffer.h"
"./include/OgreHardwareUniformBuffer.h"
"./include/OgreHardwareVertexBuffer.h"
"./include/OgreHeaderPrefix.h"
"./include/OgreHeaderSuffix.h"
"./include/OgreHighLevelGpuProgram.h"
"./include/OgreHighLevelGpuProgramManager.h"
"./include/OgreImage.h"
"./include/OgreImageCodec.h"
"./include/OgreInstanceBatch.h"
"./include/OgreInstanceBatchHW.h"
"./include/OgreInstanceBatchHW_VTF.h"
"./include/OgreInstanceBatchShader.h"
"./include/OgreInstanceBatchVTF.h"
"./include/OgreInstancedEntity.h"
"./include/OgreInstancedGeometry.h"
"./include/OgreInstanceManager.h"
"./include/OgreIteratorRange.h"
"./include/OgreIteratorWrapper.h"
"./include/OgreIteratorWrappers.h"
"./include/OgreKeyFrame.h"
"./include/OgreLight.h"
"./include/OgreLodListener.h"
"./include/OgreLodStrategy.h"
"./include/OgreLodStrategyManager.h"
"./include/OgreLog.h"
"./include/OgreLogManager.h"
"./include/OgreManualObject.h"
"./include/OgreMaterial.h"
"./include/OgreMaterialManager.h"
"./include/OgreMaterialSerializer.h"
"./include/OgreMath.h"
"./include/OgreMatrix3.h"
"./include/OgreMatrix4.h"
"./include/OgreMemoryAllocatedObject.h"
"./include/OgreMemoryAllocatorConfig.h"
"./include/OgreMemoryNedAlloc.h"
"./include/OgreMemoryNedPooling.h"
"./include/OgreMemoryStdAlloc.h"
"./include/OgreMemorySTLAllocator.h"
"./include/OgreMemoryTracker.h"
"./include/OgreMesh.h"
"./include/OgreMeshFileFormat.h"
"./include/OgreMeshManager.h"
"./include/OgreMeshSerializer.h"
"./include/OgreMeshSerializerImpl.h"
"./include/OgreMovableObject.h"
"./include/OgreMovablePlane.h"
"./include/OgreNameGenerator.h"
"./include/OgreNode.h"
"./include/OgreNumerics.h"
"./include/OgreOptimisedUtil.h"
"./include/OgreParticle.h"
"./include/OgreParticleAffector.h"
"./include/OgreParticleAffectorFactory.h"
"./include/OgreParticleEmitter.h"
"./include/OgreParticleEmitterCommands.h"
"./include/OgreParticleEmitterFactory.h"
"./include/OgreParticleIterator.h"
"./include/OgreParticleSystem.h"
"./include/OgreParticleSystemManager.h"
"./include/OgreParticleSystemRenderer.h"
"./include/OgrePass.h"
"./include/OgrePatchMesh.h"
"./include/OgrePatchSurface.h"
"./include/OgrePixelCountLodStrategy.h"
"./include/OgrePixelFormat.h"
"./include/OgrePixelFormatDescriptions.h"
"./include/OgrePlane.h"
"./include/OgrePlaneBoundedVolume.h"
"./include/OgrePlatform.h"
"./include/OgrePlatformInformation.h"
"./include/OgrePlugin.h"
"./include/OgrePolygon.h"
"./include/OgrePose.h"
"./include/OgrePredefinedControllers.h"
"./include/OgrePrefabFactory.h"
"./include/OgrePrerequisites.h"
"./include/OgreProfiler.h"
"./include/OgrePVRTCCodec.h"
"./include/OgreQuaternion.h"
"./include/OgreRadixSort.h"
"./include/OgreRay.h"
"./include/OgreRectangle2D.h"
"./include/OgreRenderable.h"
"./include/OgreRenderObjectListener.h"
"./include/OgreRenderOperation.h"
"./include/OgreRenderQueue.h"
"./include/OgreRenderQueueInvocation.h"
"./include/OgreRenderQueueListener.h"
"./include/OgreRenderQueueSortingGrouping.h"
"./include/OgreRenderSystem.h"
"./include/OgreRenderSystemCapabilities.h"
"./include/OgreRenderSystemCapabilitiesManager.h"
"./include/OgreRenderSystemCapabilitiesSerializer.h"
"./include/OgreRenderTarget.h"
"./include/OgreRenderTargetListener.h"
"./include/OgreRenderTexture.h"
"./include/OgreRenderToVertexBuffer.h"
"./include/OgreRenderWindow.h"
"./include/OgreResource.h"
"./include/OgreResourceBackgroundQueue.h"
"./include/OgreResourceGroupManager.h"
"./include/OgreResourceManager.h"
"./include/OgreRibbonTrail.h"
"./include/OgreRoot.h"
"./include/OgreRotationalSpline.h"
"./include/OgreSceneManager.h"
"./include/OgreSceneManagerEnumerator.h"
"./include/OgreSceneNode.h"
"./include/OgreSceneQuery.h"
"./include/OgreScriptCompiler.h"
"./include/OgreScriptLexer.h"
"./include/OgreScriptLoader.h"
"./include/OgreScriptParser.h"
"./include/OgreScriptTranslator.h"
"./include/OgreSearchOps.h"
"./include/OgreSerializer.h"
"./include/OgreShadowCameraSetup.h"
"./include/OgreShadowCameraSetupFocused.h"
"./include/OgreShadowCameraSetupLiSPSM.h"
"./include/OgreShadowCameraSetupPlaneOptimal.h"
"./include/OgreShadowCameraSetupPSSM.h"
"./include/OgreShadowCaster.h"
"./include/OgreShadowTextureManager.h"
"./include/OgreShadowVolumeExtrudeProgram.h"
"./include/OgreSharedPtr.h"
"./include/OgreSimpleRenderable.h"
"./include/OgreSimpleSpline.h"
"./include/OgreSingleton.h"
"./include/OgreSkeleton.h"
"./include/OgreSkeletonFileFormat.h"
"./include/OgreSkeletonInstance.h"
"./include/OgreSkeletonManager.h"
"./include/OgreSkeletonSerializer.h"
"./include/OgreSphere.h"
"./include/OgreSpotShadowFadePng.h"
"./include/OgreStableHeaders.h"
"./include/OgreStaticFaceGroup.h"
"./include/OgreStaticGeometry.h"
"./include/OgreStdHeaders.h"
"./include/OgreStreamSerialiser.h"
"./include/OgreString.h"
"./include/OgreStringConverter.h"
"./include/OgreStringInterface.h"
"./include/OgreStringVector.h"
"./include/OgreSubEntity.h"
"./include/OgreSubMesh.h"
"./include/OgreTagPoint.h"
"./include/OgreTangentSpaceCalc.h"
"./include/OgreTechnique.h"
"./include/OgreTexture.h"
"./include/OgreTextureManager.h"
"./include/OgreTextureUnitState.h"
"./include/OgreTimer.h"
"./include/OgreUnifiedHighLevelGpuProgram.h"
"./include/OgreUserObjectBindings.h"
"./include/OgreUTFString.h"
"./include/OgreVector2.h"
"./include/OgreVector3.h"
"./include/OgreVector4.h"
"./include/OgreVertexBoneAssignment.h"
"./include/OgreVertexIndexData.h"
"./include/OgreViewport.h"
"./include/OgreWindowEventUtilities.h"
"./include/OgreWireBoundingBox.h"
"./include/OgreWorkQueue.h"
"./include/OgreZip.h"
"./include/nedmalloc/malloc.c.h"
"./include/nedmalloc/nedmalloc.h"
"./include/Samples/SdkCameraMan.h"
"./include/Samples/SdkTrays.h"
"./include/Threading/OgreDefaultWorkQueue.h"
"./include/Threading/OgreDefaultWorkQueueStandard.h"
"./include/Threading/OgreDefaultWorkQueueTBB.h"
"./include/Threading/OgreThreadDefines.h"
"./include/Threading/OgreThreadDefinesBoost.h"
"./include/Threading/OgreThreadDefinesNone.h"
"./include/Threading/OgreThreadDefinesPoco.h"
"./include/Threading/OgreThreadDefinesTBB.h"
"./include/Threading/OgreThreadHeaders.h"
"./include/Threading/OgreThreadHeadersBoost.h"
"./include/Threading/OgreThreadHeadersPoco.h"
"./include/Threading/OgreThreadHeadersTBB.h"
"./include/WIN32/OgreConfigDialogImp.h"
"./include/WIN32/OgreConfigDialogImpWinRT.h"
"./include/WIN32/OgreErrorDialogImp.h"
"./include/WIN32/OgreErrorDialogImpWinRT.h"
"./include/WIN32/OgreMinGWSupport.h"
"./include/WIN32/OgreTimerImp.h"
"./resources/resource.h"
"./resources/winres.h"
"./src/OgreImageResampler.h"
"./src/OgrePixelConversions.h"
"./src/OgreSIMDHelper.h"
"./src/WIN32/resource.h"
"./src/WIN32/winres.h"

"./src/compile_OgreMain_0.cpp"
"./src/compile_OgreMain_1.cpp"
"./src/compile_OgreMain_2.cpp"
"./src/compile_OgreMain_3.cpp"
"./src/compile_OgreMain_4.cpp"
"./src/compile_OgreMain_5.cpp"
"./src/compile_OgreMain_6.cpp"
"./src/compile_OgreMain_7.cpp"
"./src/OgreAlignedAllocator.cpp"
"./src/OgreAnimable.cpp"
"./src/OgreAnimation.cpp"
"./src/OgreAnimationState.cpp"
"./src/OgreAnimationTrack.cpp"
"./src/OgreArchiveManager.cpp"
"./src/OgreAtomicScalar.cpp"
"./src/OgreAutoParamDataSource.cpp"
"./src/OgreAxisAlignedBox.cpp"
"./src/OgreBillboard.cpp"
"./src/OgreBillboardChain.cpp"
"./src/OgreBillboardParticleRenderer.cpp"
"./src/OgreBillboardSet.cpp"
"./src/OgreBone.cpp"
"./src/OgreCamera.cpp"
"./src/OgreCodec.cpp"
"./src/OgreColourValue.cpp"
"./src/OgreCommon.cpp"
"./src/OgreCompositionPass.cpp"
"./src/OgreCompositionTargetPass.cpp"
"./src/OgreCompositionTechnique.cpp"
"./src/OgreCompositor.cpp"
"./src/OgreCompositorChain.cpp"
"./src/OgreCompositorInstance.cpp"
"./src/OgreCompositorManager.cpp"
"./src/OgreConfigFile.cpp"
"./src/OgreControllerManager.cpp"
"./src/OgreConvexBody.cpp"
"./src/OgreDataStream.cpp"
"./src/OgreDDSCodec.cpp"
"./src/OgreDefaultHardwareBufferManager.cpp"
"./src/OgreDefaultSceneQueries.cpp"
"./src/OgreDeflate.cpp"
"./src/OgreDepthBuffer.cpp"
"./src/OgreDistanceLodStrategy.cpp"
"./src/OgreDualQuaternion.cpp"
"./src/OgreDynLib.cpp"
"./src/OgreDynLibManager.cpp"
"./src/OgreEdgeListBuilder.cpp"
"./src/OgreEntity.cpp"
"./src/OgreETCCodec.cpp"
"./src/OgreException.cpp"
"./src/OgreExternalTextureSource.cpp"
"./src/OgreExternalTextureSourceManager.cpp"
"./src/OgreFileSystem.cpp"
"./src/OgreFreeImageCodec.cpp"
"./src/OgreFrustum.cpp"
"./src/OgreGpuProgram.cpp"
"./src/OgreGpuProgramManager.cpp"
"./src/OgreGpuProgramParams.cpp"
"./src/OgreGpuProgramUsage.cpp"
"./src/OgreHardwareBufferManager.cpp"
"./src/OgreHardwareCounterBuffer.cpp"
"./src/OgreHardwareIndexBuffer.cpp"
"./src/OgreHardwareOcclusionQuery.cpp"
"./src/OgreHardwarePixelBuffer.cpp"
"./src/OgreHardwareUniformBuffer.cpp"
"./src/OgreHardwareVertexBuffer.cpp"
"./src/OgreHighLevelGpuProgram.cpp"
"./src/OgreHighLevelGpuProgramManager.cpp"
"./src/OgreImage.cpp"
"./src/OgreInstanceBatch.cpp"
"./src/OgreInstanceBatchHW.cpp"
"./src/OgreInstanceBatchHW_VTF.cpp"
"./src/OgreInstanceBatchShader.cpp"
"./src/OgreInstanceBatchVTF.cpp"
"./src/OgreInstancedEntity.cpp"
"./src/OgreInstancedGeometry.cpp"
"./src/OgreInstanceManager.cpp"
"./src/OgreKeyFrame.cpp"
"./src/OgreLight.cpp"
"./src/OgreLodStrategy.cpp"
"./src/OgreLodStrategyManager.cpp"
"./src/OgreLog.cpp"
"./src/OgreLogManager.cpp"
"./src/OgreManualObject.cpp"
"./src/OgreMaterial.cpp"
"./src/OgreMaterialManager.cpp"
"./src/OgreMaterialSerializer.cpp"
"./src/OgreMath.cpp"
"./src/OgreMatrix3.cpp"
"./src/OgreMatrix4.cpp"
"./src/OgreMemoryAllocatedObject.cpp"
"./src/OgreMemoryNedAlloc.cpp"
"./src/OgreMemoryNedPooling.cpp"
"./src/OgreMemoryTracker.cpp"
"./src/OgreMesh.cpp"
"./src/OgreMeshManager.cpp"
"./src/OgreMeshSerializer.cpp"
"./src/OgreMeshSerializerImpl.cpp"
"./src/OgreMovableObject.cpp"
"./src/OgreMovablePlane.cpp"
"./src/OgreNode.cpp"
"./src/OgreNumerics.cpp"
"./src/OgreOptimisedUtil.cpp"
"./src/OgreOptimisedUtilGeneral.cpp"
"./src/OgreOptimisedUtilSSE.cpp"
"./src/OgreParticle.cpp"
"./src/OgreParticleEmitter.cpp"
"./src/OgreParticleEmitterCommands.cpp"
"./src/OgreParticleIterator.cpp"
"./src/OgreParticleSystem.cpp"
"./src/OgreParticleSystemManager.cpp"
"./src/OgrePass.cpp"
"./src/OgrePatchMesh.cpp"
"./src/OgrePatchSurface.cpp"
"./src/OgrePixelCountLodStrategy.cpp"
"./src/OgrePixelFormat.cpp"
"./src/OgrePlane.cpp"
"./src/OgrePlatformInformation.cpp"
"./src/OgrePolygon.cpp"
"./src/OgrePose.cpp"
"./src/OgrePrecompiledHeaders.cpp"
"./src/OgrePredefinedControllers.cpp"
"./src/OgrePrefabFactory.cpp"
"./src/OgreProfiler.cpp"
"./src/OgrePVRTCCodec.cpp"
"./src/OgreQuaternion.cpp"
"./src/OgreRectangle2D.cpp"
"./src/OgreRenderQueue.cpp"
"./src/OgreRenderQueueInvocation.cpp"
"./src/OgreRenderQueueSortingGrouping.cpp"
"./src/OgreRenderSystem.cpp"
"./src/OgreRenderSystemCapabilities.cpp"
"./src/OgreRenderSystemCapabilitiesManager.cpp"
"./src/OgreRenderSystemCapabilitiesSerializer.cpp"
"./src/OgreRenderTarget.cpp"
"./src/OgreRenderTexture.cpp"
"./src/OgreRenderToVertexBuffer.cpp"
"./src/OgreRenderWindow.cpp"
"./src/OgreResource.cpp"
"./src/OgreResourceBackgroundQueue.cpp"
"./src/OgreResourceGroupManager.cpp"
"./src/OgreResourceManager.cpp"
"./src/OgreRibbonTrail.cpp"
"./src/OgreRoot.cpp"
"./src/OgreRotationSpline.cpp"
"./src/OgreSceneManager.cpp"
"./src/OgreSceneManagerEnumerator.cpp"
"./src/OgreSceneNode.cpp"
"./src/OgreSceneQuery.cpp"
"./src/OgreScriptCompiler.cpp"
"./src/OgreScriptLexer.cpp"
"./src/OgreScriptParser.cpp"
"./src/OgreScriptTranslator.cpp"
"./src/OgreSearchOps.cpp"
"./src/OgreSerializer.cpp"
"./src/OgreShadowCameraSetup.cpp"
"./src/OgreShadowCameraSetupFocused.cpp"
"./src/OgreShadowCameraSetupLiSPSM.cpp"
"./src/OgreShadowCameraSetupPlaneOptimal.cpp"
"./src/OgreShadowCameraSetupPSSM.cpp"
"./src/OgreShadowCaster.cpp"
"./src/OgreShadowTextureManager.cpp"
"./src/OgreShadowVolumeExtrudeProgram.cpp"
"./src/OgreSimpleRenderable.cpp"
"./src/OgreSimpleSpline.cpp"
"./src/OgreSkeleton.cpp"
"./src/OgreSkeletonInstance.cpp"
"./src/OgreSkeletonManager.cpp"
"./src/OgreSkeletonSerializer.cpp"
"./src/OgreStaticGeometry.cpp"
"./src/OgreStreamSerialiser.cpp"
"./src/OgreString.cpp"
"./src/OgreStringConverter.cpp"
"./src/OgreStringInterface.cpp"
"./src/OgreSubEntity.cpp"
"./src/OgreSubMesh.cpp"
"./src/OgreTagPoint.cpp"
"./src/OgreTangentSpaceCalc.cpp"
"./src/OgreTechnique.cpp"
"./src/OgreTexture.cpp"
"./src/OgreTextureManager.cpp"
"./src/OgreTextureUnitState.cpp"
"./src/OgreUnifiedHighLevelGpuProgram.cpp"
"./src/OgreUserObjectBindings.cpp"
"./src/OgreUTFString.cpp"
"./src/OgreVector2.cpp"
"./src/OgreVector3.cpp"
"./src/OgreVector4.cpp"
"./src/OgreVertexIndexData.cpp"
"./src/OgreViewport.cpp"
"./src/OgreWindowEventUtilities.cpp"
"./src/OgreWireBoundingBox.cpp"
"./src/OgreWorkQueue.cpp"
"./src/OgreZip.cpp"
"./src/Threading/OgreDefaultWorkQueueStandard.cpp"
"./src/WIN32/OgreConfigDialog.cpp"
"./src/WIN32/OgreConfigDialogWinRT.cpp"
"./src/WIN32/OgreErrorDialog.cpp"
"./src/WIN32/OgreErrorDialogWinRT.cpp"
"./src/WIN32/OgreFileSystemLayer.cpp"
"./src/WIN32/OgreMinGWSupport.cpp"
"./src/WIN32/OgreOptimisedUtilDirectXMath.cpp"
"./src/WIN32/OgreTimer.cpp"
)
