add_library(ogre3d_particlefx

"./include/OgreAreaEmitter.h"
"./include/OgreBoxEmitter.h"
"./include/OgreBoxEmitterFactory.h"
"./include/OgreColourFaderAffector.h"
"./include/OgreColourFaderAffector2.h"
"./include/OgreColourFaderAffectorFactory.h"
"./include/OgreColourFaderAffectorFactory2.h"
"./include/OgreColourImageAffector.h"
"./include/OgreColourImageAffectorFactory.h"
"./include/OgreColourInterpolatorAffector.h"
"./include/OgreColourInterpolatorAffectorFactory.h"
"./include/OgreCylinderEmitter.h"
"./include/OgreCylinderEmitterFactory.h"
"./include/OgreDeflectorPlaneAffector.h"
"./include/OgreDeflectorPlaneAffectorFactory.h"
"./include/OgreDirectionRandomiserAffector.h"
"./include/OgreDirectionRandomiserAffectorFactory.h"
"./include/OgreEllipsoidEmitter.h"
"./include/OgreEllipsoidEmitterFactory.h"
"./include/OgreHollowEllipsoidEmitter.h"
"./include/OgreHollowEllipsoidEmitterFactory.h"
"./include/OgreLinearForceAffector.h"
"./include/OgreLinearForceAffectorFactory.h"
"./include/OgreParticleFXPlugin.h"
"./include/OgreParticleFXPrerequisites.h"
"./include/OgrePointEmitter.h"
"./include/OgrePointEmitterFactory.h"
"./include/OgreRingEmitter.h"
"./include/OgreRingEmitterFactory.h"
"./include/OgreRotationAffector.h"
"./include/OgreRotationAffectorFactory.h"
"./include/OgreScaleAffector.h"
"./include/OgreScaleAffectorFactory.h"

"./src/compile_Plugin_ParticleFX_0.cpp"
"./src/compile_Plugin_ParticleFX_1.cpp"
"./src/OgreAreaEmitter.cpp"
"./src/OgreBoxEmitter.cpp"
"./src/OgreColourFaderAffector.cpp"
"./src/OgreColourFaderAffector2.cpp"
"./src/OgreColourImageAffector.cpp"
"./src/OgreColourInterpolatorAffector.cpp"
"./src/OgreCylinderEmitter.cpp"
"./src/OgreDeflectorPlaneAffector.cpp"
"./src/OgreDirectionRandomiserAffector.cpp"
"./src/OgreEllipsoidEmitter.cpp"
"./src/OgreHollowEllipsoidEmitter.cpp"
"./src/OgreLinearForceAffector.cpp"
"./src/OgreParticleFX.cpp"
"./src/OgreParticleFXPlugin.cpp"
"./src/OgrePointEmitter.cpp"
"./src/OgreRingEmitter.cpp"
"./src/OgreRotationAffector.cpp"
"./src/OgreScaleAffector.cpp"
)
