add_library(ogre3d_procedural

"./include/Procedural.h"
"./include/ProceduralBoxGenerator.h"
"./include/ProceduralCapsuleGenerator.h"
"./include/ProceduralConeGenerator.h"
"./include/ProceduralCylinderGenerator.h"
"./include/ProceduralExtruder.h"
"./include/ProceduralGeometryHelpers.h"
"./include/ProceduralIcoSphereGenerator.h"
"./include/ProceduralLathe.h"
"./include/ProceduralMeshGenerator.h"
"./include/ProceduralMultiShape.h"
"./include/ProceduralPath.h"
"./include/ProceduralPathGenerators.h"
"./include/ProceduralPlaneGenerator.h"
"./include/ProceduralPlatform.h"
"./include/ProceduralRoot.h"
"./include/ProceduralRoundedBoxGenerator.h"
"./include/ProceduralShape.h"
"./include/ProceduralShapeGenerators.h"
"./include/ProceduralSphereGenerator.h"
"./include/ProceduralSplines.h"
"./include/ProceduralStableHeaders.h"
"./include/ProceduralTorusGenerator.h"
"./include/ProceduralTorusKnotGenerator.h"
"./include/ProceduralTrack.h"
"./include/ProceduralTriangleBuffer.h"
"./include/ProceduralTriangulator.h"
"./include/ProceduralTubeGenerator.h"
"./include/ProceduralUtils.h"

"./src/ProceduralBoxGenerator.cpp"
"./src/ProceduralCapsuleGenerator.cpp"
"./src/ProceduralConeGenerator.cpp"
"./src/ProceduralCylinderGenerator.cpp"
"./src/ProceduralExtruder.cpp"
"./src/ProceduralGeometryHelpers.cpp"
"./src/ProceduralIcoSphereGenerator.cpp"
"./src/ProceduralLathe.cpp"
"./src/ProceduralMultiShape.cpp"
"./src/ProceduralPath.cpp"
"./src/ProceduralPathGenerators.cpp"
"./src/ProceduralPlaneGenerator.cpp"
"./src/ProceduralPrecompiledHeaders.cpp"
"./src/ProceduralRoot.cpp"
"./src/ProceduralRoundedBoxGenerator.cpp"
"./src/ProceduralShape.cpp"
"./src/ProceduralShapeGenerators.cpp"
"./src/ProceduralSphereGenerator.cpp"
"./src/ProceduralTorusGenerator.cpp"
"./src/ProceduralTorusKnotGenerator.cpp"
"./src/ProceduralTrack.cpp"
"./src/ProceduralTriangulator.cpp"
"./src/ProceduralTubeGenerator.cpp"
"./src/ProceduralUtils.cpp"
)
