add_library(ois

"./include/OIS.h"
"./include/OISConfig.h"
"./include/OISEffect.h"
"./include/OISEvents.h"
"./include/OISException.h"
"./include/OISFactoryCreator.h"
"./include/OISForceFeedback.h"
"./include/OISInputManager.h"
"./include/OISInterface.h"
"./include/OISJoyStick.h"
"./include/OISKeyboard.h"
"./include/OISMouse.h"
"./include/OISMultiTouch.h"
"./include/OISObject.h"
"./include/OISPrereqs.h"
"./include/iphone/iPhoneAccelerometer.h"
"./include/iphone/iPhoneHelpers.h"
"./include/iphone/iPhoneInputManager.h"
"./include/iphone/iPhoneMultiTouch.h"
"./include/iphone/iPhonePrereqs.h"
"./include/linux/EventHelpers.h"
"./include/linux/LinuxForceFeedback.h"
"./include/linux/LinuxInputManager.h"
"./include/linux/LinuxJoyStickEvents.h"
"./include/linux/LinuxKeyboard.h"
"./include/linux/LinuxMouse.h"
"./include/linux/LinuxPrereqs.h"
"./include/mac/MacHelpers.h"
"./include/mac/MacHIDManager.h"
"./include/mac/MacInputManager.h"
"./include/mac/MacJoyStick.h"
"./include/mac/MacKeyboard.h"
"./include/mac/MacMouse.h"
"./include/mac/MacPrereqs.h"
"./include/win32/Win32ForceFeedback.h"
"./include/win32/Win32InputManager.h"
"./include/win32/Win32JoyStick.h"
"./include/win32/Win32KeyBoard.h"
"./include/win32/Win32Mouse.h"
"./include/win32/Win32Prereqs.h"
"./src/extras/LIRC/OISLIRC.h"
"./src/extras/LIRC/OISLIRCFactoryCreator.h"
"./src/extras/LIRC/OISLIRCRingBuffer.h"
"./src/win32/extras/WiiMote/hiddevice.h"
"./src/win32/extras/WiiMote/OISWiiMote.h"
"./src/win32/extras/WiiMote/OISWiiMoteFactoryCreator.h"
"./src/win32/extras/WiiMote/OISWiiMoteForceFeedback.h"
"./src/win32/extras/WiiMote/OISWiiMoteRingBuffer.h"
"./src/win32/extras/WiiMote/wiimote.h"

"./src/OISEffect.cpp"
"./src/OISException.cpp"
"./src/OISForceFeedback.cpp"
"./src/OISInputManager.cpp"
"./src/OISJoyStick.cpp"
"./src/OISKeyboard.cpp"
"./src/OISObject.cpp"
"./src/extras/LIRC/OISLIRC.cpp"
"./src/extras/LIRC/OISLIRCFactoryCreator.cpp"
"./src/linux/EventHelpers.cpp"
"./src/linux/LinuxForceFeedback.cpp"
"./src/linux/LinuxInputManager.cpp"
"./src/linux/LinuxJoyStickEvents.cpp"
"./src/linux/LinuxKeyboard.cpp"
"./src/linux/LinuxMouse.cpp"
"./src/mac/MacHelpers.cpp"
"./src/mac/MacHIDManager.cpp"
"./src/mac/MacInputManager.cpp"
"./src/mac/MacJoyStick.cpp"
"./src/mac/MacKeyboard.cpp"
"./src/mac/MacMouse.cpp"
"./src/win32/Win32ForceFeedback.cpp"
"./src/win32/Win32InputManager.cpp"
"./src/win32/Win32JoyStick.cpp"
"./src/win32/Win32KeyBoard.cpp"
"./src/win32/Win32Mouse.cpp"
"./src/win32/extras/WiiMote/hiddevice.cpp"
"./src/win32/extras/WiiMote/main.cpp"
"./src/win32/extras/WiiMote/OISWiiMote.cpp"
"./src/win32/extras/WiiMote/OISWiiMoteFactoryCreator.cpp"
"./src/win32/extras/WiiMote/OISWiiMoteForceFeedback.cpp"
"./src/win32/extras/WiiMote/OISWiiMoteRingBuffer.cpp"
"./src/win32/extras/WiiMote/wiimote.cpp"
)
