add_library(openexr

"./include/IlmBaseConfig.h"
"./include/OpenEXRConfig.h"
"./include/half/eLut.h"
"./include/half/half.h"
"./include/half/halfFunction.h"
"./include/half/halfLimits.h"
"./include/half/toFloat.h"
"./include/iex/Iex.h"
"./include/iex/IexBaseExc.h"
"./include/iex/IexErrnoExc.h"
"./include/iex/IexMacros.h"
"./include/iex/IexMathExc.h"
"./include/iex/IexThrowErrnoExc.h"
"./include/ilmimf/b44ExpLogTable.h"
"./include/ilmimf/ImfAcesFile.h"
"./include/ilmimf/ImfArray.h"
"./include/ilmimf/ImfAttribute.h"
"./include/ilmimf/ImfAutoArray.h"
"./include/ilmimf/ImfB44Compressor.h"
"./include/ilmimf/ImfBoxAttribute.h"
"./include/ilmimf/ImfChannelList.h"
"./include/ilmimf/ImfChannelListAttribute.h"
"./include/ilmimf/ImfCheckedArithmetic.h"
"./include/ilmimf/ImfChromaticities.h"
"./include/ilmimf/ImfChromaticitiesAttribute.h"
"./include/ilmimf/ImfCompression.h"
"./include/ilmimf/ImfCompressionAttribute.h"
"./include/ilmimf/ImfCompressor.h"
"./include/ilmimf/ImfConvert.h"
"./include/ilmimf/ImfCRgbaFile.h"
"./include/ilmimf/ImfDoubleAttribute.h"
"./include/ilmimf/ImfEnvmap.h"
"./include/ilmimf/ImfEnvmapAttribute.h"
"./include/ilmimf/ImfFloatAttribute.h"
"./include/ilmimf/ImfFrameBuffer.h"
"./include/ilmimf/ImfFramesPerSecond.h"
"./include/ilmimf/ImfHeader.h"
"./include/ilmimf/ImfHuf.h"
"./include/ilmimf/ImfInputFile.h"
"./include/ilmimf/ImfInt64.h"
"./include/ilmimf/ImfIntAttribute.h"
"./include/ilmimf/ImfIO.h"
"./include/ilmimf/ImfKeyCode.h"
"./include/ilmimf/ImfKeyCodeAttribute.h"
"./include/ilmimf/ImfLineOrder.h"
"./include/ilmimf/ImfLineOrderAttribute.h"
"./include/ilmimf/ImfLut.h"
"./include/ilmimf/ImfMatrixAttribute.h"
"./include/ilmimf/ImfMisc.h"
"./include/ilmimf/ImfMultiView.h"
"./include/ilmimf/ImfName.h"
"./include/ilmimf/ImfOpaqueAttribute.h"
"./include/ilmimf/ImfOutputFile.h"
"./include/ilmimf/ImfPixelType.h"
"./include/ilmimf/ImfPizCompressor.h"
"./include/ilmimf/ImfPreviewImage.h"
"./include/ilmimf/ImfPreviewImageAttribute.h"
"./include/ilmimf/ImfPxr24Compressor.h"
"./include/ilmimf/ImfRational.h"
"./include/ilmimf/ImfRationalAttribute.h"
"./include/ilmimf/ImfRgba.h"
"./include/ilmimf/ImfRgbaFile.h"
"./include/ilmimf/ImfRgbaYca.h"
"./include/ilmimf/ImfRleCompressor.h"
"./include/ilmimf/ImfScanLineInputFile.h"
"./include/ilmimf/ImfStandardAttributes.h"
"./include/ilmimf/ImfStdIO.h"
"./include/ilmimf/ImfStringAttribute.h"
"./include/ilmimf/ImfStringVectorAttribute.h"
"./include/ilmimf/ImfTestFile.h"
"./include/ilmimf/ImfThreading.h"
"./include/ilmimf/ImfTileDescription.h"
"./include/ilmimf/ImfTileDescriptionAttribute.h"
"./include/ilmimf/ImfTiledInputFile.h"
"./include/ilmimf/ImfTiledMisc.h"
"./include/ilmimf/ImfTiledOutputFile.h"
"./include/ilmimf/ImfTiledRgbaFile.h"
"./include/ilmimf/ImfTileOffsets.h"
"./include/ilmimf/ImfTimeCode.h"
"./include/ilmimf/ImfTimeCodeAttribute.h"
"./include/ilmimf/ImfVecAttribute.h"
"./include/ilmimf/ImfVersion.h"
"./include/ilmimf/ImfWav.h"
"./include/ilmimf/ImfXdr.h"
"./include/ilmimf/ImfZipCompressor.h"
"./include/ilmthread/IlmThread.h"
"./include/ilmthread/IlmThreadMutex.h"
"./include/ilmthread/IlmThreadPool.h"
"./include/ilmthread/IlmThreadSemaphore.h"
"./include/imath/ImathBox.h"
"./include/imath/ImathBoxAlgo.h"
"./include/imath/ImathColor.h"
"./include/imath/ImathColorAlgo.h"
"./include/imath/ImathEuler.h"
"./include/imath/ImathExc.h"
"./include/imath/ImathFrame.h"
"./include/imath/ImathFrustum.h"
"./include/imath/ImathFrustumTest.h"
"./include/imath/ImathFun.h"
"./include/imath/ImathGL.h"
"./include/imath/ImathGLU.h"
"./include/imath/ImathHalfLimits.h"
"./include/imath/ImathInt64.h"
"./include/imath/ImathInterval.h"
"./include/imath/ImathLimits.h"
"./include/imath/ImathLine.h"
"./include/imath/ImathLineAlgo.h"
"./include/imath/ImathMath.h"
"./include/imath/ImathMatrix.h"
"./include/imath/ImathMatrixAlgo.h"
"./include/imath/ImathPlane.h"
"./include/imath/ImathPlatform.h"
"./include/imath/ImathQuat.h"
"./include/imath/ImathRandom.h"
"./include/imath/ImathRoots.h"
"./include/imath/ImathShear.h"
"./include/imath/ImathSphere.h"
"./include/imath/ImathVec.h"
"./include/imath/ImathVecAlgo.h"

"./src/half/half.cpp"
"./src/iex/IexBaseExc.cpp"
"./src/iex/IexThrowErrnoExc.cpp"
"./src/ilmimf/ImfAcesFile.cpp"
"./src/ilmimf/ImfAttribute.cpp"
"./src/ilmimf/ImfB44Compressor.cpp"
"./src/ilmimf/ImfBoxAttribute.cpp"
"./src/ilmimf/ImfChannelList.cpp"
"./src/ilmimf/ImfChannelListAttribute.cpp"
"./src/ilmimf/ImfChromaticities.cpp"
"./src/ilmimf/ImfChromaticitiesAttribute.cpp"
"./src/ilmimf/ImfCompressionAttribute.cpp"
"./src/ilmimf/ImfCompressor.cpp"
"./src/ilmimf/ImfConvert.cpp"
"./src/ilmimf/ImfCRgbaFile.cpp"
"./src/ilmimf/ImfDoubleAttribute.cpp"
"./src/ilmimf/ImfEnvmap.cpp"
"./src/ilmimf/ImfEnvmapAttribute.cpp"
"./src/ilmimf/ImfFloatAttribute.cpp"
"./src/ilmimf/ImfFrameBuffer.cpp"
"./src/ilmimf/ImfFramesPerSecond.cpp"
"./src/ilmimf/ImfHeader.cpp"
"./src/ilmimf/ImfHuf.cpp"
"./src/ilmimf/ImfInputFile.cpp"
"./src/ilmimf/ImfIntAttribute.cpp"
"./src/ilmimf/ImfIO.cpp"
"./src/ilmimf/ImfKeyCode.cpp"
"./src/ilmimf/ImfKeyCodeAttribute.cpp"
"./src/ilmimf/ImfLineOrderAttribute.cpp"
"./src/ilmimf/ImfLut.cpp"
"./src/ilmimf/ImfMatrixAttribute.cpp"
"./src/ilmimf/ImfMisc.cpp"
"./src/ilmimf/ImfMultiView.cpp"
"./src/ilmimf/ImfOpaqueAttribute.cpp"
"./src/ilmimf/ImfOutputFile.cpp"
"./src/ilmimf/ImfPizCompressor.cpp"
"./src/ilmimf/ImfPreviewImage.cpp"
"./src/ilmimf/ImfPreviewImageAttribute.cpp"
"./src/ilmimf/ImfPxr24Compressor.cpp"
"./src/ilmimf/ImfRational.cpp"
"./src/ilmimf/ImfRationalAttribute.cpp"
"./src/ilmimf/ImfRgbaFile.cpp"
"./src/ilmimf/ImfRgbaYca.cpp"
"./src/ilmimf/ImfRleCompressor.cpp"
"./src/ilmimf/ImfScanLineInputFile.cpp"
"./src/ilmimf/ImfStandardAttributes.cpp"
"./src/ilmimf/ImfStdIO.cpp"
"./src/ilmimf/ImfStringAttribute.cpp"
"./src/ilmimf/ImfStringVectorAttribute.cpp"
"./src/ilmimf/ImfTestFile.cpp"
"./src/ilmimf/ImfThreading.cpp"
"./src/ilmimf/ImfTileDescriptionAttribute.cpp"
"./src/ilmimf/ImfTiledInputFile.cpp"
"./src/ilmimf/ImfTiledMisc.cpp"
"./src/ilmimf/ImfTiledOutputFile.cpp"
"./src/ilmimf/ImfTiledRgbaFile.cpp"
"./src/ilmimf/ImfTileOffsets.cpp"
"./src/ilmimf/ImfTimeCode.cpp"
"./src/ilmimf/ImfTimeCodeAttribute.cpp"
"./src/ilmimf/ImfVecAttribute.cpp"
"./src/ilmimf/ImfVersion.cpp"
"./src/ilmimf/ImfWav.cpp"
"./src/ilmimf/ImfZipCompressor.cpp"
"./src/ilmthread/IlmThread.cpp"
"./src/ilmthread/IlmThreadMutex.cpp"
"./src/ilmthread/IlmThreadPool.cpp"
"./src/ilmthread/IlmThreadSemaphore.cpp"
"./src/imath/ImathBox.cpp"
"./src/imath/ImathColorAlgo.cpp"
"./src/imath/ImathFun.cpp"
"./src/imath/ImathMatrixAlgo.cpp"
"./src/imath/ImathRandom.cpp"
"./src/imath/ImathShear.cpp"
"./src/imath/ImathVec.cpp"
)
