add_library(recast

"./include/Recast.h"
"./include/RecastAlloc.h"
"./include/RecastAssert.h"

"./src/Recast.cpp"
"./src/RecastAlloc.cpp"
"./src/RecastArea.cpp"
"./src/RecastContour.cpp"
"./src/RecastFilter.cpp"
"./src/RecastLayers.cpp"
"./src/RecastMesh.cpp"
"./src/RecastMeshDetail.cpp"
"./src/RecastRasterization.cpp"
"./src/RecastRegion.cpp"
)
