add_library(zzip

"./include/zzip/conf.h"
"./include/zzip/fetch.h"
"./include/zzip/file.h"
"./include/zzip/format.h"
"./include/zzip/info.h"
"./include/zzip/lib.h"
"./include/zzip/plugin.h"
"./include/zzip/stdint.h"
"./include/zzip/types.h"
"./include/zzip/zzip.h"
"./include/zzip/zzip32.h"
"./include/zzip/_config.h"
"./include/zzip/_msvc.h"
"./include/zzip/__debug.h"
"./include/zzip/__dirent.h"
"./include/zzip/__hints.h"
"./include/zzip/__mmap.h"

"./src/dir.c"
"./src/err.c"
"./src/fetch.c"
"./src/file.c"
"./src/info.c"
"./src/plugin.c"
"./src/stat.c"
"./src/zip.c"
)
